# steamlocate-rs

./: .gitignore  Cargo.toml  LICENSE
.cargo/: config
assets/: steam.json
crates/bvdf/: Cargo.toml
crates/bvdf/src/: lib.rs
crates/slinky-game-example/: Cargo.toml  steam_appid.txt
crates/slinky-game-example/src/: main.rs
crates/slinky-slint-example/: Cargo.toml
crates/slinky-slint-example/src/: main.rs
examples/: shortcuts.rs
src/: bvdf.rs  lib.rs  old.rs  rich.rs  shortcut.rs
