[workspace]
members = [".", "crates/*"]

[package]
name = "slinky"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "TBD"

[dependencies]
crc = "3.0"
derive_more = "0.99.17"
indexmap = "1.9"
keyvalues-parser = "0.1"
paste = "1.0.12"
sha2 = "0.10.6"
steamid-ng = "1"
steamy-vdf = "0.2"
thiserror = "1"

[target.'cfg(target_os="windows")'.dependencies]
winreg = "0.10"

[target.'cfg(not(target_os="windows"))'.dependencies]
dirs = "3"
