[package]
name = "slinky-game-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
slinky = { path = "../.." }
eframe = "0.21.3"
egui = "0.21.0"
winit = "0.28.3"
egui_extras = { version = "0.21.0", features = ["image", "svg"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-appender = "0.2.2"
tracing-unwrap = { version = "0.10", default-features = false, features = ["log-location"] }
